--- a/package.json
+++ b/package.json
@@ -1,33 +1,44 @@
 {
-	"name": "jad-webgpu-renderer",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
+	"name": "jad-webgpu-visualization-renderer",
+	"version": "0.1.0",
+	"description": "a webgpu renderer for visualization",
+	"main": "lib/index.js",
+	"types": "typings/index.d.ts",
 	"scripts": {
 		"start": "webpack serve",
-		"build": "webpack",
+		"build": "tsc",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "",
+	"author": "Jad2wizard",
 	"license": "ISC",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Jad2wizard/jad-webgpu-renderer.git"
+	},
+	"files": [
+		"lib",
+		"typings"
+	],
 	"devDependencies": {
 		"@babel/core": "^7.24.3",
 		"@babel/preset-env": "^7.24.3",
 		"@babel/preset-typescript": "^7.24.1",
-		"@types/three": "^0.162.0",
-		"@webgpu/types": "^0.1.40",
 		"babel-loader": "^9.1.3",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.34.1",
 		"prettier": "^3.2.5",
-		"three": "^0.162.0",
 		"tsconfig-paths-webpack-plugin": "^4.1.0",
 		"typescript": "^5.4.3",
-		"webgpu-utils": "^1.6.0",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^5.0.4"
+	},
+	"dependencies": {
+		"@types/three": "^0.162.0",
+		"@webgpu/types": "^0.1.40",
+		"three": "^0.162.0",
+		"webgpu-utils": "^1.6.0"
 	}
 }
