--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
 		}
 	},
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "./typings/**/*"]
+	"exclude": ["node_modules", "./typings/**/*", "./src/demo/*"]
 }
