fix: Material 创建 uniform 时，错误将 storage 存储类型的 attribute当作 uniform 创建

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"moduleResolution": "node",
 		"target": "esnext",
 		"jsx": "react",
-		"typeRoots": ["node_modules/@types", "./typings/*", "node_modules/@webgpu/types"],
+		"typeRoots": ["node_modules/@types", "./typings/*", "node_modules/@webgpu/types", "./src/types.ts"],
 		"baseUrl": "./",
 		"paths": {
 			"@/*": ["src/*"],
