--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
 		}
 	},
 	"include": ["./src/**/*"],
-	"exclude": ["node_modules", "./typings/**/*", "./src/demo/*"]
+	"exclude": ["node_modules", "./typings/**/*"]
+	// "exclude": ["node_modules", "./typings/**/*", "./src/demo/*"]
 }
