--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"@types/three": "^0.162.0",
 		"@webgpu/types": "^0.1.40",
+		"moment": "^2.30.1",
 		"three": "^0.162.0",
 		"webgpu-utils": "^1.6.0"
 	}
