--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
 		"webpack-dev-server": "^5.0.4"
 	},
 	"dependencies": {
+		"@types/lodash": "^4.17.4",
 		"@types/three": "^0.162.0",
 		"@webgpu/types": "^0.1.40",
+		"lodash": "^4.17.21",
 		"moment": "^2.30.1",
 		"three": "^0.162.0",
 		"webgpu-utils": "^1.6.0"
