--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"start": "webpack serve",
 		"build": "tsc && tsc-alias",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write \"src/**/*.{ts,tsx,css,scss,html,json,md}\""
 	},
 	"author": "Jad2wizard",
 	"license": "ISC",
