--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "jad-webgpu-visualization-renderer",
-	"version": "0.5.0",
+	"version": "0.5.1",
 	"description": "a webgpu renderer for visualization",
 	"main": "lib/index.js",
 	"types": "typings/index.d.ts",
 	"scripts": {
 		"start": "webpack serve",
-		"build": "tsc && tsc-alias",
+		"build": "npm run clear-output && tsc && tsc-alias",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"format": "prettier --write \"src/**/*.{ts,tsx,css,scss,html,json,md}\""
+		"format": "prettier --write \"src/**/*.{ts,tsx,css,scss,html,json,md}\"",
+		"clear-output": "del ./typings/* ./lib/*"
 	},
 	"author": "Jad2wizard",
 	"license": "ISC",
@@ -25,13 +26,14 @@
 		"@babel/preset-env": "^7.24.3",
 		"@babel/preset-typescript": "^7.24.1",
 		"babel-loader": "^9.1.3",
+		"del-cli": "^5.1.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.34.1",
 		"prettier": "^3.2.5",
-		"tsconfig-paths-webpack-plugin": "^4.1.0",
 		"tsc-alias": "^1.8.10",
+		"tsconfig-paths-webpack-plugin": "^4.1.0",
 		"typescript": "^5.4.3",
 		"webpack": "^5.91.0",
 		"webpack-cli": "^5.1.4",
