--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"build": "npm run clear-output && tsc && tsc-alias",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "prettier --write \"src/**/*.{ts,tsx,css,scss,html,json,md}\"",
-		"clear-output": "del ./typings/* ./lib/*"
+		"clear-output": "if exist ./typings (for %f in (.\\typings\\*) do del /q %f) && if exist ./lib (for %f in (.\\lib\\*) do del /q %f)"
 	},
 	"author": "Jad2wizard",
 	"license": "ISC",
@@ -31,6 +31,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
 		"eslint-plugin-react": "^7.34.1",
+		"html-webpack-plugin": "^5.6.3",
 		"prettier": "^3.2.5",
 		"tsc-alias": "^1.8.10",
 		"tsconfig-paths-webpack-plugin": "^4.1.0",
