--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jad-webgpu-visualization-renderer",
-	"version": "0.5.6",
+	"version": "0.5.7",
 	"description": "a webgpu renderer for visualization",
 	"main": "lib/index.js",
 	"types": "typings/index.d.ts",
@@ -9,7 +9,7 @@
 		"build": "npm run clear-output && tsc && tsc-alias",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"format": "prettier --write \"src/**/*.{ts,tsx,css,scss,html,json,md}\"",
-		"clear-output": "if exist ./typings (for %f in (.\\typings\\*) do del /q %f) && if exist ./lib (for %f in (.\\lib\\*) do del /q %f)"
+		"clear-output": "del-cli \"./typings/*\" \"./lib/*\""
 	},
 	"author": "Jad2wizard",
 	"license": "ISC",
@@ -26,7 +26,7 @@
 		"@babel/preset-env": "^7.24.3",
 		"@babel/preset-typescript": "^7.24.1",
 		"babel-loader": "^9.1.3",
-		"del-cli": "^5.1.0",
+		"del-cli": "^6.0.0",
 		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
